# Geant4-Tokamak

./: .clang-format  ActionInitialization.hh  CMakeLists.txt  Construction.cc  Construction.hh  Dockerfile  PhysicsList.cc  PhysicsList.hh  README.md  example_outfile.txt  main.cc  run.mac  setup.mac  vis.mac
include/: Construction.hh  Detector.hh  PrimaryGeneratorAction.hh  Run.hh
src/: ActionInitialization.cc  Construction.cc  Detector.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  Run.cc
